tests/syntax-error/syntax-error.nu
export def hello [] {
    "Hello, World!
}

